@@ -137,6 +137,7 @@ FILES= \
 ./Gui/PixbufList.cs \
 ./Gui/AbstractSecondaryViewContent.cs \
 ./Gui/CompletionDatabaseWizard/CreateDBGenerator.cs \
+./Gui/CompletionDatabaseWizard/DownloadGenerator.cs \
 ./Gui/CompletionDatabaseWizard/CreatingGenerator.cs \
 ./Gui/CompletionDatabaseWizard/GenerateDatabase.cs \
 ./Gui/CompletionDatabaseWizard/druid.cs \
